# CapyFormer

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
capyformer/: __init__.py  data.py  data_ray.py  decision_transformer.py  hf_trainer.py  model.py  rnn_model.py  rnn_trainer.py  trainer.py  utils.py
capyformer/data_collection/: data_collection.py  data_colloection_lite.py  data_colloection_ray.py  utils.py
capyformer/data_utils/: __init__.py  bearing_dataset.py  convert_position_frame.py  load_trajectories.py  toy_position_velocity_dataset.py
capyformer/sanity_check/: __init__.py  test_training_pipeline.py  toy_datasets.py  toy_environments.py
examples/: train_transformer_debug.py  transformer_policy.py
